--- a/my-app/src/app/app.component.html
+++ b/my-app/src/app/app.component.html
@@ -1,5 +1,12 @@
 <div class="container">
 <h1>Comidas que eu gosto </h1>
 <img src="/assets/lasanha.jpeg" class="img" />
+    <h3> {{nome}} </h3>
+
+<div class="exercicio">
+    <input type="button" value="-" (click)="menos()"/>
+    <h3>{{ count }}</h3>
+    <input type="button" value="+" (click)=" mais"/>
 </div>
+
 
