--- a/my-app/src/app/app.component.css
+++ b/my-app/src/app/app.component.css
@@ -10,3 +10,22 @@
     width: 100px;
     height: 100px;
 }
+
+.exercicio {
+display: flex;
+justify-content: center;
+align-items: center;
+
+}
+
+.exercicio input {
+    width: 40px;
+    height: 40px;
+    margin: 5px;
+    background: rgb(92, 241, 135);
+    outline: none;
+    font-size: 18px;
+
+}
+
+h3
