--- a/my-app/src/app/components/login/login.component.html
+++ b/my-app/src/app/components/login/login.component.html
@@ -1,7 +1,10 @@
 <div class="container">
     <div class="login">
         <h2>sing in</h2>
-
+<div class="error">
+    <i class="bx bxs-message-error"></i>
+    <span> login ou senha icorretos!</span>
+    </div>
         <div class="input">
             <i class='bx bx-envelope'></i>
             <input type="text" name="login" id="login" value="e-mail" />
@@ -14,11 +17,11 @@
         <div class="remember">
             <div>
                 <input type="checkbox" name="remember" id="remember" />
-                <h4> remember me</h4>
+                <a href="#">remember me</a>
             </div>
-            <h4> forgot password?</h4>
+            <a href="#">forgot password?</a>
         </div>
-        <button> SIGN IN</button>
+        <button class="button"> SIGN IN</button>
         <h3> dont have a account? create</h3>
 
     </div>
