--- a/my-app/src/app/components/login/login.component.css
+++ b/my-app/src/app/components/login/login.component.css
@@ -1,3 +1,25 @@
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;500;600&display=swap');
+* {
+    font-family: 'Poppins', sans-serif;
+}
+
+h2 {
+margin:20px;
+}
+
+.error{
+    display: flex;
+    align-items: center;
+    gap: 10px;
+background: tomato;
+width: 360px;
+padding: 5px;
+border-radius: 8px;
+box-shadow: 2px 2px 5px #383838;
+margin-bottom: 5px;
+color: ;
+}
+
 .container {
     background: #9733FF;
     height: 100vh;
@@ -33,10 +55,45 @@ align-items: center;
     border: none;
     width: 210px;
     color: #999;
+    height: 30px;
+    margin-left: 5px;
+    outline: none;
 }
 
 i {
 font-size: 25px;
 color: linear gradient( #4201F1, #892AE8);
 color: #581558
+}
+
+.remember {
+    display: flex;
+    justify-content: space-between;
+    width: 330px;
+    margin:20px;
+}
+
+.remember div {
+display: flex;
+gap: 10px;
+}
+
+.remember a {
+    text-decoration: none;
+    color: #383838;
+}
+
+.button {
+width: 180px;
+height: 40px;
+margin-bottom: 20px;
+border-radius: 40px;
+border: none;
+box-shadow: 2px 2px 10px #383838;
+background: linear-gradient(rgb(121, 15, 178), rgb(186, 110, 226));
+
+}
+
+h3 {
+    font-weight: 400px;
 }
