--- a/my-app/src/app/components/login/login.component.css
+++ b/my-app/src/app/components/login/login.component.css
@@ -12,12 +12,13 @@ margin:20px;
     align-items: center;
     gap: 10px;
 background: tomato;
-width: 360px;
+width: 250px;
 padding: 5px;
 border-radius: 8px;
 box-shadow: 2px 2px 5px #383838;
 margin-bottom: 5px;
-color: ;
+height: 38px;
+
 }
 
 .container {
@@ -58,6 +59,7 @@ align-items: center;
     height: 30px;
     margin-left: 5px;
     outline: none;
+    font-size: 18px;
 }
 
 i {
@@ -91,9 +93,28 @@ border-radius: 40px;
 border: none;
 box-shadow: 2px 2px 10px #383838;
 background: linear-gradient(rgb(121, 15, 178), rgb(186, 110, 226));
+cursor: pointer;
 
+
+}
+
+.button:hover{
+    filter: brightness(140%);
 }
 
 h3 {
     font-weight: 400px;
+}
+
+.sucess {
+    display: flex;
+    align-items: center;
+    gap: 10px;
+    background: rgb(44, 165, 54);
+    width: 300px;
+    padding: 5px;
+    border-radius: 8px;
+    box-shadow: 2px 2px 5px #383838;
+    margin-bottom: 5px;
+    height: 38px; 
 }
