--- a/my-app/src/app/components/login/login.component.html
+++ b/my-app/src/app/components/login/login.component.html
@@ -1,6 +1,6 @@
 <div class="container">
     <div class="login">
-        <h2>Sing in</h2>
+        <h2>Login</h2>
 <div class="error" *ngIf="isError">
     <i class="bx bxs-message-error"></i>
     <span> Login or password is incorrect!</span>
@@ -28,7 +28,7 @@
             <a href="#">Forgot password?</a>
         </div>
         <button class="button" (click)="login()">SIGN IN</button>
-        <h3>Dont have a account? create</h3>
+        <h3>Don't have a account? Create</h3>
 
     </div>
 </div>
