--- a/my-app/src/app/components/page-not-found/page-not-found.component.html
+++ b/my-app/src/app/components/page-not-found/page-not-found.component.html
@@ -1,1 +1,18 @@
-<h1>Page not found!</h1>
+
+<head>
+  <title>Error 404 - Page Not Found</title>
+</head>
+<body>
+  <div class="container">
+    <div class="error-message">
+      <div class="error-code">Error 404</div>
+      <div class="error-description">
+        <br> The page you are looking for does not exist.<br>
+        You may have entered the wrong address.
+      </div>
+    </div>
+    <div class="error-image">
+      <img src="gato.gif" width="500" height="400">
+    </div>
+  </div>
+</body>
