--- a/my-app/src/app/components/create-user/create-user.component.html
+++ b/my-app/src/app/components/create-user/create-user.component.html
@@ -1,1 +1,33 @@
-<p>create-user works!</p>
+<div class="container">
+    <div class="login">
+        <h2>Create your account</h2>
+<div class="error" *ngIf="isError">
+    <i class="bx bxs-message-error"></i>
+    <span> Login or password is incorrect!</span>
+    </div>
+
+    <div class="sucess" *ngIf="isSucess">
+        <i class="bx bxs-message-square-check"></i>
+        <span> Login Aproved</span>      
+    </div>
+        <h3>Your email address</h3>
+        <div class="input">
+            <i class='bx bx-envelope'></i>
+            <input type="text" name="login" id="login" placeholder="E-mail" [(ngModel)]="user" />
+        </div>
+        <h3>Choose a password</h3>
+        <div class="input">
+            <i class='bx bxs-lock'></i>
+            <input type="password" name="password" id="password" placeholder="Password" [(ngModel)]="pwd" />
+            <i class='bx bxs-low-vision'></i>
+        </div>
+        <h3>Type the password again</h3>
+        <div class="input">
+            <i class='bx bxs-lock'></i>
+            <input type="password" name="password" id="password" placeholder="Password" [(ngModel)]="pwd" />
+            <i class='bx bxs-low-vision'></i>
+        </div>
+        
+        <button class="button" (click)="login()">SIGN IN</button>
+    </div>
+</div>
