--- a/my-app/src/app/components/page-not-found/page-not-found.component.html
+++ b/my-app/src/app/components/page-not-found/page-not-found.component.html
@@ -1,4 +1,3 @@
-
 <head>
   <title>Error 404 - Page Not Found</title>
 </head>
@@ -7,8 +6,8 @@
     <div class="error-message">
       <div class="error-code">Error 404</div>
       <div class="error-description">
-        <br> The page you are looking for does not exist.<br>
-        You may have entered the wrong address.
+        <br> The page you are looking for does not exist,<br>
+      you may have entered the wrong address.
       </div>
     </div>
     <div class="error-image">
