--- a/my-app/src/app/components/create-user/create-user.component.css
+++ b/my-app/src/app/components/create-user/create-user.component.css
@@ -1,97 +1,96 @@
-@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;500;600&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap");
+
 * {
-    font-family: 'Poppins', sans-serif;
+  font-family: "Poppins", sans-serif;
 }
-
-h2 {
-margin:20px;
-}
-
-
-
-
 
 .container {
-    background: #9733FF;
-    height: 100vh;
-    display: flex;
-    justify-content: center;
-    align-items: center;
+  background: linear-gradient(60deg, #9734ff, rgb(78, 78, 209));
+  height: 100vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
-.login {
-    width: 450px;
-    height: 450px;
-    background: #fff;
-    border-radius: 15px;
-    box-shadow: rgb(38, 57, 77) 0px 20px 30px -10px;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
+.create-user {
+  width: 450px;
+  height: 450px;
+  background: rgb(255, 255, 255);
+  border-radius: 15px;
+  box-shadow: rgb(38, 57, 77) 0px 20px 30px -10px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
 }
 
-.input {
-width: 300px;
-box-shadow: rgba(0, 0, 0, 0.2) 0px 12px 28px 0px, rgba(0, 0, 0, 0.1) 0px 2px 4px 0px, rgba(255, 255, 255, 0.05) 0px 0px 0px 1px inset;;
-margin: 10px; 
-padding-left: 30px;
-height: 45px;
-border-radius: 60px;
-display: flex;
-align-items: center;
-}
-
-.input input {
-    border: none;
-    width: 210px;
-    color: #999;
-    height: 30px;
-    margin-left: 5px;
-    outline: none;
-    font-size: 18px;
-}
-
-i {
-font-size: 25px;
-color: linear gradient( #4201F1, #892AE8);
-color: #581558
-}
-
-
-
-
-
-.button {
-width: 180px;
-height: 40px;
-margin-bottom: 20px;
-border-radius: 40px;
-border: none;
-box-shadow: 2px 2px 10px #383838;
-background: linear-gradient(rgb(121, 15, 178), rgb(186, 110, 226));
-cursor: pointer;
-
-
-}
-
-.button:hover{
-    filter: brightness(140%);
-}
-
-h3 {
-    font-weight: 400px;
+.error {
+  display: flex;
+  align-items: center;
+  gap: 10px;
+  background: tomato;
+  width: 345px;
+  padding: 5px;
+  border-radius: 10px;
+  box-shadow: 2px 2px 5px;
+  margin-bottom: 5px;
 }
 
 .sucess {
-    display: flex;
-    align-items: center;
-    gap: 10px;
-    background: rgb(44, 165, 54);
-    width: 300px;
-    padding: 5px;
-    border-radius: 8px;
-    box-shadow: 2px 2px 5px #383838;
-    margin-bottom: 5px;
-    height: 38px; 
+  display: flex;
+  align-items: center;
+  gap: 10px;
+  background: rgb(73, 231, 107);
+  width: 345px;
+  padding: 5px;
+  border-radius: 10px;
+  box-shadow: 2px 2px 5px;
+  margin-bottom: 5px;
+}
+
+.input {
+  width: 300px;
+  height: 40px;
+  box-shadow: rgba(0, 0, 0, 0.2) 0px 12px 28px 0px,
+    rgba(0, 0, 0, 0.1) 0px 2px 4px 0px,
+    rgba(255, 255, 255, 0.05) 0px 0px 0px 1px inset;
+  margin: 10px;
+  padding-left: 20px;
+  border-radius: 60px;
+  display: flex;
+  align-items: center;
+}
+
+.input input {
+  font-size: 18px;
+  height: 30px;
+  margin-left: 5px;
+  border: none;
+  width: 210px;
+  color: #999;
+  outline: none;
+}
+
+i {
+  font-size: 30px;
+  color: linear-gradient (#f1f5ff, #9734ff);
+}
+
+.button {
+  height: 40px;
+  width: 180px;
+  margin-bottom: 20px;
+  border-radius: 40px;
+  border: none;
+  box-shadow: 2px 2px 10px #383838;
+  background: linear-gradient(60deg, #9734ff, rgb(78, 78, 209));
+  color: #fff;
+}
+
+.button:hover {
+  filter: brightness(140%);
+}
+
+h3 {
+  font-weight: 400;
 }
