--- a/my-app/src/app/components/create-user/create-user.component.css
+++ b/my-app/src/app/components/create-user/create-user.component.css
@@ -5,7 +5,7 @@
 }
 
 .container {
-  background: linear-gradient(60deg, #9734ff, rgb(78, 78, 209));
+  background: linear-gradient(rgb(121, 15, 178), rgb(186, 110, 226));
   height: 100vh;
   display: flex;
   justify-content: center;
@@ -83,7 +83,7 @@ i {
   border-radius: 40px;
   border: none;
   box-shadow: 2px 2px 10px #383838;
-  background: linear-gradient(60deg, #9734ff, rgb(78, 78, 209));
+  background: linear-gradient(rgb(121, 15, 178), rgb(186, 110, 226));
   color: #fff;
 }
 
