--- a/my-app/src/app/components/dashboard/dashboard.component.html
+++ b/my-app/src/app/components/dashboard/dashboard.component.html
@@ -1,44 +1,77 @@
 <div class="container">
-
-<div class="header1">
-  <h2>dashboard</h2>
-  <i class="bx bx-menu"></i>
-</div>
-
-<div class="header2">
-  <div class="box-esq">
-    <i class="bx bxs-bell"></i>
-    <i class="bx bxs-envelope"></i>
-    <i class="bx bxs-cog"></i>
+  <div class="header1">
+    <h2>dashboard</h2>
+    <i class="bx bx-menu"></i>
   </div>
 
-  <div class="box-dir">
-    <i class="bx bx-search"></i>
-    <i class="bx bxs-rocket"></i>
-  </div>
-</div>
-
-<div class="menu">
-  <ul>
-    <li><a href="#">dashboard</a></li>
-    <li><a href="#">charts</a></li>
-    <li><a href="#">tables</a></li>
-    <li><a href="#">forms</a></li>
-    <li><a href="#">UI elements</a></li>
-  </ul>
-</div>
-
-<div class="content">
-  <div class="overview">
+  <div class="header2">
     <div class="box-esq">
-      <h2>Overview</h2>
+      <i class="bx bxs-bell"></i>
+      <i class="bx bxs-envelope"></i>
+      <i class="bx bxs-cog"></i>
     </div>
+
     <div class="box-dir">
-      <div class="today">today</div>
-      <div class="month">month</div>
-      <div class="year">year</div>
-      <button>log out</button>
+      <i class="bx bx-search"></i>
+      <i class="bx bxs-rocket"></i>
     </div>
   </div>
-  <div class="cards"></div>
+
+  <div class="menu">
+    <ul>
+      <li>
+        <i class="bx bxs-dashboard"></i>
+        <a href="#">Dashboard</a>
+      </li>
+      <li>
+        <i class="bx bx-analyse"></i>
+        <a href="#">Análise</a>
+      </li>
+      <li>
+        <i class="bx bx-task"></i>
+        <a href="#">Todo List</a>
+      </li>
+      <li>
+        <i class="bx bxs-group"></i>
+        <a href="#">Equipe</a>
+      </li>
+      <li>
+        <i class="bx bxs-group"></i>
+        <a href="#">Inbox</a>
+      </li>
+      <li>
+        <i class="bx bxs-star"></i>
+        <a href="#">Prioridades</a>
+      </li>
+    </ul>
+  </div>
+
+  <div class="content">
+
+    <div class="ad">
+    <div class="img">Imagem</div>
+    <div class="graph">Grafico</div>
+    </div>
+
+    <section>
+    <div class="box1">
+      <div class="title">
+        <button>
+          <i class='bx bx-plus'></i>
+        </button>
+        <span>Membros do time</span>
+      </div>
+      <div class="member">
+        Membros
+      </div>
+      <div class="title">
+       <button>
+        <i class='bx bx-plus'></i>
+       </button>
+       <span>Atvidade</span>
+      </div>
+    </div>
+    <div class="box2"></div>
+    </section>
+  </div>
 </div>
