--- a/my-app/src/app/components/dashboard/dashboard.component.html
+++ b/my-app/src/app/components/dashboard/dashboard.component.html
@@ -47,31 +47,88 @@
   </div>
 
   <div class="content">
-
     <div class="ad">
-    <div class="img">Imagem</div>
-    <div class="graph">Grafico</div>
+      <div class="img">Imagem</div>
+      <div class="graph">Grafico</div>
     </div>
 
     <section>
-    <div class="box1">
-      <div class="title">
-        <button>
-          <i class='bx bx-plus'></i>
-        </button>
-        <span>Membros do time</span>
+      <div class="box1">
+        <div class="title">
+          <button>
+            <i class="bx bx-plus"></i>
+          </button>
+          <span>Membros do time</span>
+        </div>
+        <div class="member">
+          <div class="card-member">
+            <div class="img">
+              <img src="/assets/avatar.png" alt="" />
+            </div>
+            <div class="name">
+              <h3>Prof. Beto</h3>
+              <h4>Professor</h4>
+            </div>
+          </div>
+
+          <div class="card-member">
+            <div class="img">
+              <img src="/assets/avatar.png" alt="" />
+            </div>
+            <div class="name">
+              <h3>Prof. Beto</h3>
+              <h4>Professor</h4>
+            </div>
+          </div>
+
+          <div class="card-member">
+            <div class="img">
+              <img src="/assets/avatar.png" alt="" />
+            </div>
+            <div class="name">
+              <h3>Prof. Beto</h3>
+              <h4>Professor</h4>
+            </div>
+          </div>
+
+          <div class="card-member">
+            <div class="img">
+              <img src="/assets/avatar.png" alt="" />
+            </div>
+            <div class="name">
+              <h3>Prof. Beto</h3>
+              <h4>Professor</h4>
+            </div>
+          </div>
+
+          <div class="card-member">
+            <div class="img">
+              <img src="/assets/avatar.png" alt="" />
+            </div>
+            <div class="name">
+              <h3>Prof. Beto</h3>
+              <h4>Professor</h4>
+            </div>
+          </div>
+
+          <div class="card-member">
+            <div class="img">
+              <img src="/assets/avatar.png" alt="" />
+            </div>
+            <div class="name">
+              <h3>Prof. Beto</h3>
+              <h4>Professor</h4>
+            </div>
+          </div>
+        </div>
+        <div class="title">
+          <button>
+            <i class="bx bx-plus"></i>
+          </button>
+          <span>Atvidade</span>
+        </div>
       </div>
-      <div class="member">
-        Membros
-      </div>
-      <div class="title">
-       <button>
-        <i class='bx bx-plus'></i>
-       </button>
-       <span>Atvidade</span>
-      </div>
-    </div>
-    <div class="box2"></div>
+      <div class="box2"></div>
     </section>
   </div>
 </div>
