--- a/my-app/src/app/components/dashboard/dashboard.component.html
+++ b/my-app/src/app/components/dashboard/dashboard.component.html
@@ -17,6 +17,7 @@
     </div>
   </div>
 
+  <div class="user-info">xxx</div>
   <div class="menu">
     <ul>
       <li>
@@ -125,10 +126,65 @@
           <button>
             <i class="bx bx-plus"></i>
           </button>
-          <span>Atvidade</span>
+          <span>Atividade</span>
+        </div>
+        
+        <div class="activity">
+          <div class="item1">
+            <div class="card-member">
+              <div class="img">
+                <img src="/assets/avatar.png" alt="" />
+              </div>
+              <div class="name">
+                <h3>Prof. Beto</h3>
+                <h4>Professor</h4>
+                <h5>11 de maio de 2023</h5>
+              </div>
+            </div>
+          </div>
+          <div class="item2"><div class="card-member">
+            <div class="img">
+              <img src="/assets/avatar.png" alt="" />
+            </div>
+            <div class="name">
+              <h3>Prof. Beto</h3>
+              <h4>Professor</h4>
+              <h5>11 de maio de 2023</h5>
+            </div>
+          </div>
+        </div>
+          <div class="item3"><div class="card-member">
+            <div class="img">
+              <img src="/assets/avatar.png" alt="" />
+            </div>
+            <div class="name">
+              <h3>Prof. Beto</h3>
+              <h4>Professor</h4>
+              <h5>11 de maio de 2023</h5>
+            </div>
+          </div>
+        </div>
+          <div class="item4"><div class="card-member">
+            <div class="img">
+              <img src="/assets/avatar.png" alt="" />
+            </div>
+            <div class="name">
+              <h3>Prof. Beto</h3>
+              <h4>Professor</h4>
+              <h5>11 de maio de 2023</h5>
+            </div>
+          </div>
+        </div>
         </div>
       </div>
-      <div class="box2"></div>
+      <div class="box2">
+        <div class="title">
+        <button>
+          <i class="bx bx-plus"></i>
+        </button>
+        <span>Adicionar nova tarefa</span>
+      </div>
+    </div>
     </section>
   </div>
 </div>
