--- a/my-app/src/app/components/dashboard/dashboard.component.css
+++ b/my-app/src/app/components/dashboard/dashboard.component.css
@@ -4,17 +4,17 @@
   font-family: "Poppins", sans-serif;
 }
 
-h3{
+h3 {
   font-size: 14px;
 }
 
-h4{
-font-size: 12px;
-color: #bab4e5;
-margin-top: 5px;
+h4 {
+  font-size: 12px;
+  color: #bab4e5;
+  margin-top: 5px;
 }
 
-h5{
+h5 {
   font-size: 10px;
   margin-top: 10px;
 }
@@ -22,20 +22,22 @@ h5{
 .container {
   margin: 0 auto;
   width: 90%;
-  height: 900px;
+  height: 100vh;
   display: grid;
-  grid-template-columns: 170px 1fr 300px;
   grid-template-rows: 60px 1fr;
+  grid-template-columns: 200px 1fr 300px;
   box-shadow: 0 0 20px 10px #ccc;
   border-radius: 20px;
 }
 
 .menu {
   background: #f7f8fa;
+  /* border: 1px solid black; */
 }
 
 .header1 {
-  background: #4375f9;
+  background: #3e87f0;
+  /* border: 1px solid black; */
   color: #fff;
   display: flex;
   justify-content: space-between;
@@ -44,7 +46,7 @@ h5{
 }
 
 .header1 i {
-  font-size: 27px;
+  font-size: 24px;
 }
 
 .header1 h2 {
@@ -53,15 +55,11 @@ h5{
 
 .header2 {
   background: #fff;
+  /* border: 1px solid black; */
   display: grid;
-  grid-template-columns: 1fr 1fr;
+  grid-template-columns: auto auto;
+  justify-content: space-between;
   align-items: center;
-  padding: 20px;
-}
-
-.header2 .box-dir{
-    display: flex;
-    justify-content: end;
 }
 
 .header2 i {
@@ -72,34 +70,32 @@ h5{
 
 .menu ul {
   margin-top: 20px;
-  
+  margin-left: 10px;
 }
 
-.menu li {
-  padding: 10px;
-  list-style: none;
-  display: flex;
-  align-items: center;
+.menu ul li {
   padding: 18px;
+  list-style: none;
+  /* display: flex; */
+  /* align-items: center; */
 }
 
-.menu li:hover, .menu li a:hover {
-color: #947dd2;
+.menu li a:hover {
+  color: #947dd2;
 }
 
 .menu li a {
   text-decoration: none;
-  font: 20px;
+  font-size: 20px;
   color: #696969;
-  margin-left: 15px;
+  display: flex;
+  gap: 12px;
+  align-items: center;
 
+  /* margin-left: 15px; */
 }
 
-.menu li i{
-  font-size: 22px;
-}
-
-.content .ad{
+.content .ad {
   display: grid;
   grid-template-columns: 3fr 1fr;
   grid-template-rows: 180px;
@@ -111,75 +107,74 @@ color: #947dd2;
   background: #fbe5ca;
 }
 
-.content .ad .graph{
+.content .ad .graph {
   background: #f0edfe;
 }
 
-section{
+section {
   display: grid;
   grid-template-columns: 1fr 450px;
-  grid-template-rows: 270px;
+  grid-template-rows: 500px;
   margin: 20px 30px;
   gap: 20px;
 }
 
-section .box1 .member{
+section .box1 .member {
   background: #f8fafd;
   display: grid;
   grid-template-columns: 1fr 1fr;
   grid-template-rows: 60px 60px 60px;
   margin: 20px 0;
   padding: 20px;
-} 
-
-section .box1 .member .card-member{
-display: grid;
-grid-template-columns: auto 1fr;
-align-items: center;
-gap: 10px;
 }
 
-section .box1 .member .card-member img{
-width: 50px;
+section .box1 .member .card-member {
+  display: grid;
+  grid-template-columns: auto 1fr;
+  align-items: center;
+  gap: 15px;
 }
 
-section .box2{
-background: #3af;
+section .box1 .member .card-member img {
+  width: 50px;
 }
 
-.title{
+section .box2 {
+  background: #3af;
+}
+
+.title {
   background: #e4f7f0;
   height: 45px;
   display: flex;
   align-items: center;
- padding: 5px 25px;
- border-radius: 5px;
- box-shadow: 0 0 5px 4px #eee;
+  padding: 5px 25px;
+  border-radius: 5px;
+  box-shadow: 0 0 5px 4px #eee;
 }
 
-.title button{
+.title button {
   background: #40c17d;
   color: #fff;
-  border-radius: 50px;
+  border-radius: 50%;
   border: none;
-  width: 26px;
-  height: 26px;
+  width: 35px;
+  height: 35px;
   font-size: 15px;
   font-weight: bold;
 }
 
-.title span{
+.title span {
   font-size: 18px;
   font-weight: 600;
   margin-left: 15px;
 }
 
-.container .user-info {
-grid-column: 3 / 4;
-grid-row: 1 / 3;
-}
+/* .container .user-info {
 
-.content .activity{
+} */
+
+.content .activity {
   display: grid;
   grid-template-columns: 1fr 1fr;
   grid-template-rows: 80px 80px;
@@ -188,16 +183,87 @@ grid-row: 1 / 3;
 }
 
 .content .activity div {
-background: #f8fafd;
+  background: #f8fafd;
 }
 
 .activity .card-member img {
-width: 40px;
+  width: 40px;
 }
 
 .activity .card-member {
-display: grid;
-grid-template-columns: auto 1fr;
-gap: 20px;
-padding: 10px;
+  display: grid;
+  grid-template-columns: auto 1fr;
+  gap: 15px;
+  padding: 10px;
+}
+
+.container .user-info {
+  display: grid;
+  grid-template-rows: 75px 1fr 100px 200px 1fr;
+  grid-column: 3 / 4;
+  grid-row: 1 / 3;
+}
+
+.container .user-info .box-1 {
+  display: flex;
+  gap: 16px;
+  justify-content: end;
+  align-items: center;
+  padding-right: 30px;
+}
+
+.container .user-info .box-1 i {
+  font-size: 30px;
+  color: #696969;
+}
+
+.container .user-info .box-2 {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+.container .user-info .box-2 img {
+  width: 100px;
+  margin-bottom: 10px;
+}
+
+.container .user-info .box-2 h5 {
+  color: #b0abe2;
+}
+
+.container .user-info .box-3 .box {
+  background: #f0ecff;
+  width: 280px;
+  height: 90px;
+  padding: 20px;
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  border-radius: 8px;
+}
+
+.container .user-info .box-3 .box .item-1, .container .user-info .box-3 .box .item-2 {
+  display: flex;
+  align-items: center;
+  gap: 8px;
+}
+
+.container .user-info .box-3 .box .troph {
+  width: 40px;
+  height: 40px;
+  background: #fff;
+  border-radius: 50%;
+  display: grid;
+  place-items: center;
+}
+
+.container .user-info .box-3 {
+  margin: 0 auto;
+}
+.container .user-info .box-4 {
+  background: rgb(255, 170, 170);
+}
+.container .user-info .box-5 {
+  background: rgb(244, 255, 170);
 }
