--- a/my-app/src/app/components/dashboard/dashboard.component.html
+++ b/my-app/src/app/components/dashboard/dashboard.component.html
@@ -1,56 +1,95 @@
 <div class="container">
+  <!-- HEADER 1 -->
   <div class="header1">
     <h2>dashboard</h2>
     <i class="bx bx-menu"></i>
   </div>
 
+  <!-- HEADER 2 -->
   <div class="header2">
     <div class="box-esq">
       <i class="bx bxs-bell"></i>
-      <i class="bx bxs-envelope"></i>
+      <i class="bx bx-envelope"></i>
       <i class="bx bxs-cog"></i>
     </div>
-
     <div class="box-dir">
       <i class="bx bx-search"></i>
       <i class="bx bxs-rocket"></i>
     </div>
   </div>
 
-  <div class="user-info">xxx</div>
+  <!-- User Information -->
+  <div class="user-info">
+    <div class="box-1">
+      <i class="bx bx-bell"></i>
+      <i class="bx bx-cog"></i>
+      <i class="bx bxs-user-circle"></i>
+    </div>
+
+    <div class="box-2">
+      <div class="img">
+        <img src="/assets/avatar.png" alt="" />
+      </div>
+      <h3>José Roberto Campos</h3>
+      <h5>jose.campos@ifms.edu.br</h5>
+    </div>
+    <div class="box-3"> 
+
+      <div class="box">
+        <div class="item-1">
+          <div class="troph">
+            <i class='bx bx-trophy' ></i>
+          </div>
+          <div>
+            <h4>20</h4>
+            <h4>Número 20</h4>
+          </div>
+        </div>
+        <div class="item-2">
+          <div class="troph">
+            <i class='bx bx-user' ></i>
+          </div>
+          <div>
+            <h4>40</h4>
+            <h4>Número 40</h4>
+          </div>
+        </div>
+      </div>
+
+    </div>
+    <div class="box-4">x</div>
+    <div class="box-5">x</div>
+  </div>
+
+  <!-- MENU -->
   <div class="menu">
     <ul>
       <li>
-        <i class="bx bxs-dashboard"></i>
-        <a href="#">Dashboard</a>
+        <a href="#"> <i class="bx bxs-dashboard"></i>Dashboard</a>
+      </li>
+
+      <li>
+        <a href="#"><i class="bx bxs-analyse"></i>Análise</a>
       </li>
       <li>
-        <i class="bx bx-analyse"></i>
-        <a href="#">Análise</a>
+        <a href="#"><i class="bx bx-task"></i>Todo List</a>
       </li>
       <li>
-        <i class="bx bx-task"></i>
-        <a href="#">Todo List</a>
+        <a href="#"> <i class="bx bxs-group"></i>Equipe</a>
       </li>
       <li>
-        <i class="bx bxs-group"></i>
-        <a href="#">Equipe</a>
+        <a href="#"><i class="bx bxs-group"></i>Inbox</a>
       </li>
       <li>
-        <i class="bx bxs-group"></i>
-        <a href="#">Inbox</a>
-      </li>
-      <li>
-        <i class="bx bxs-star"></i>
-        <a href="#">Prioridades</a>
+        <a href="#"><i class="bx bxs-star"></i>Prioridades</a>
       </li>
     </ul>
   </div>
-
+  <!-- CONTENT -->
   <div class="content">
     <div class="ad">
       <div class="img">Imagem</div>
-      <div class="graph">Grafico</div>
+      <div class="graph">Gráfico</div>
     </div>
 
     <section>
@@ -59,132 +98,162 @@
           <button>
             <i class="bx bx-plus"></i>
           </button>
-          <span>Membros do time</span>
+          <span>Membros do Time</span>
         </div>
+
         <div class="member">
+          <!-- CARD MEMBER -->
           <div class="card-member">
             <div class="img">
               <img src="/assets/avatar.png" alt="" />
             </div>
-            <div class="name">
-              <h3>Prof. Beto</h3>
-              <h4>Professor</h4>
-            </div>
-          </div>
 
-          <div class="card-member">
-            <div class="img">
-              <img src="/assets/avatar.png" alt="" />
-            </div>
             <div class="name">
               <h3>Prof. Beto</h3>
               <h4>Professor</h4>
             </div>
           </div>
+          <!-- FIM CARD MEMBER -->
+          <!-- CARD MEMBER -->
+          <div class="card-member">
+            <div class="img">
+              <img src="/assets/avatar.png" alt="" />
+            </div>
 
-          <div class="card-member">
-            <div class="img">
-              <img src="/assets/avatar.png" alt="" />
-            </div>
             <div class="name">
               <h3>Prof. Beto</h3>
               <h4>Professor</h4>
             </div>
           </div>
+          <!-- FIM CARD MEMBER -->
+          <!-- CARD MEMBER -->
+          <div class="card-member">
+            <div class="img">
+              <img src="/assets/avatar.png" alt="" />
+            </div>
 
-          <div class="card-member">
-            <div class="img">
-              <img src="/assets/avatar.png" alt="" />
-            </div>
             <div class="name">
               <h3>Prof. Beto</h3>
               <h4>Professor</h4>
             </div>
           </div>
+          <!-- FIM CARD MEMBER -->
+          <!-- CARD MEMBER -->
+          <div class="card-member">
+            <div class="img">
+              <img src="/assets/avatar.png" alt="" />
+            </div>
 
-          <div class="card-member">
-            <div class="img">
-              <img src="/assets/avatar.png" alt="" />
-            </div>
             <div class="name">
               <h3>Prof. Beto</h3>
               <h4>Professor</h4>
             </div>
           </div>
+          <!-- FIM CARD MEMBER -->
+          <!-- CARD MEMBER -->
+          <div class="card-member">
+            <div class="img">
+              <img src="/assets/avatar.png" alt="" />
+            </div>
 
-          <div class="card-member">
-            <div class="img">
-              <img src="/assets/avatar.png" alt="" />
-            </div>
             <div class="name">
               <h3>Prof. Beto</h3>
               <h4>Professor</h4>
             </div>
           </div>
+          <!-- FIM CARD MEMBER -->
+          <!-- CARD MEMBER -->
+          <div class="card-member">
+            <div class="img">
+              <img src="/assets/avatar.png" alt="" />
+            </div>
+
+            <div class="name">
+              <h3>Prof. Beto</h3>
+              <h4>Professor</h4>
+            </div>
+          </div>
+          <!-- FIM CARD MEMBER -->
         </div>
+
         <div class="title">
           <button>
             <i class="bx bx-plus"></i>
           </button>
           <span>Atividade</span>
         </div>
-        
+
         <div class="activity">
-          <div class="item1">
+          <div class="item-1">
+            <!-- CARD MEMBER -->
             <div class="card-member">
               <div class="img">
                 <img src="/assets/avatar.png" alt="" />
               </div>
+
               <div class="name">
                 <h3>Prof. Beto</h3>
                 <h4>Professor</h4>
-                <h5>11 de maio de 2023</h5>
+                <h5>11 maio 2023</h5>
               </div>
             </div>
+            <!-- FIM CARD MEMBER -->
           </div>
-          <div class="item2"><div class="card-member">
-            <div class="img">
-              <img src="/assets/avatar.png" alt="" />
+          <div class="item-2">
+            <!-- CARD MEMBER -->
+            <div class="card-member">
+              <div class="img">
+                <img src="/assets/avatar.png" alt="" />
+              </div>
+
+              <div class="name">
+                <h3>Prof. Beto</h3>
+                <h4>Professor</h4>
+                <h5>11 maio 2023</h5>
+              </div>
             </div>
-            <div class="name">
-              <h3>Prof. Beto</h3>
-              <h4>Professor</h4>
-              <h5>11 de maio de 2023</h5>
-            </div>
+            <!-- FIM CARD MEMBER -->
           </div>
-        </div>
-          <div class="item3"><div class="card-member">
-            <div class="img">
-              <img src="/assets/avatar.png" alt="" />
+          <div class="item-3">
+            <!-- CARD MEMBER -->
+            <div class="card-member">
+              <div class="img">
+                <img src="/assets/avatar.png" alt="" />
+              </div>
+
+              <div class="name">
+                <h3>Prof. Beto</h3>
+                <h4>Professor</h4>
+                <h5>11 maio 2023</h5>
+              </div>
             </div>
-            <div class="name">
-              <h3>Prof. Beto</h3>
-              <h4>Professor</h4>
-              <h5>11 de maio de 2023</h5>
-            </div>
+            <!-- FIM CARD MEMBER -->
           </div>
-        </div>
-          <div class="item4"><div class="card-member">
-            <div class="img">
-              <img src="/assets/avatar.png" alt="" />
+          <div class="item-4">
+            <!-- CARD MEMBER -->
+            <div class="card-member">
+              <div class="img">
+                <img src="/assets/avatar.png" alt="" />
+              </div>
+
+              <div class="name">
+                <h3>Prof. Beto</h3>
+                <h4>Professor</h4>
+                <h5>11 maio 2023</h5>
+              </div>
             </div>
-            <div class="name">
-              <h3>Prof. Beto</h3>
-              <h4>Professor</h4>
-              <h5>11 de maio de 2023</h5>
-            </div>
+            <!-- FIM CARD MEMBER -->
           </div>
-        </div>
         </div>
       </div>
       <div class="box2">
         <div class="title">
-        <button>
-          <i class="bx bx-plus"></i>
-        </button>
-        <span>Adicionar nova tarefa</span>
+          <button>
+            <i class="bx bx-plus"></i>
+          </button>
+          <span>Adicionar nova tarefa</span>
+        </div>
       </div>
-    </div>
     </section>
   </div>
 </div>
