--- a/my-app/src/app/components/dashboard/dashboard.component.html
+++ b/my-app/src/app/components/dashboard/dashboard.component.html
@@ -33,12 +33,11 @@
       <h3>José Roberto Campos</h3>
       <h5>jose.campos@ifms.edu.br</h5>
     </div>
-    <div class="box-3"> 
-
+    <div class="box-3">
       <div class="box">
         <div class="item-1">
           <div class="troph">
-            <i class='bx bx-trophy' ></i>
+            <i class="bx bx-trophy"></i>
           </div>
           <div>
             <h4>20</h4>
@@ -47,7 +46,7 @@
         </div>
         <div class="item-2">
           <div class="troph">
-            <i class='bx bx-user' ></i>
+            <i class="bx bx-user"></i>
           </div>
           <div>
             <h4>40</h4>
@@ -55,10 +54,96 @@
           </div>
         </div>
       </div>
-
     </div>
-    <div class="box-4">x</div>
-    <div class="box-5">x</div>
+
+    <div class="box-4">
+      <div class="user-title">
+        <h2>Tarefas em andamento</h2>
+        <a href="#">Mostrar todos</a>
+      </div>
+
+      <div class="task-1">
+        <div>
+          <span>01</span>
+        </div>
+        <div>
+          <h3>Programar o todo list</h3>
+          <h4>Tempo restante: 1d</h4>
+        </div>
+      </div>
+
+      <div class="task-2">
+        <div>
+          <span>02</span>
+        </div>
+        <div>
+          <h3>Corrigir o index.css</h3>
+          <h4>Tempo restante: 3d</h4>
+        </div>
+      </div>
+    </div>
+
+    <div class="box-5">
+      <div class="user-title">
+        <h2>Tarefas recentes</h2>
+        <a href="#">Mostrar todos</a>
+      </div>
+
+      <div class="recent-task">
+        <div class="status">
+          <div class="ball"></div>
+          <span>Adicionar botão em Task</span>
+        </div>
+
+        <div>
+          <span>4d</span>
+        </div>
+      </div>
+
+      <div class="recent-task">
+        <div class="status">
+          <div class="ball"></div>
+          <span>Adicionar botão em Task</span>
+        </div>
+
+        <div>
+          <span>4d</span>
+        </div>
+      </div>
+
+      <div class="recent-task">
+        <div class="status">
+          <div class="ball"></div>
+          <span>Adicionar botão em Task</span>
+        </div>
+
+        <div>
+          <span>4d</span>
+        </div>
+      </div>
+
+      <div class="recent-task">
+        <div class="status">
+          <div class="ball"></div>
+          <span>Adicionar botão em Task</span>
+        </div>
+
+        <div>
+          <span>4d</span>
+        </div>
+      </div>
+
+      <div class="recent-task">
+        <div class="status">
+          <div class="ball"></div>
+          <span>Adicionar botão em Task</span>
+        </div>
+
+        <div>
+          <span>4d</span>
+        </div>
+      </div>
+    </div>
   </div>
 
   <!-- MENU -->
