--- a/my-app/src/app/components/dashboard/dashboard.component.css
+++ b/my-app/src/app/components/dashboard/dashboard.component.css
@@ -2,15 +2,18 @@
 
 * {
   font-family: "Poppins", sans-serif;
+  text-decoration: none;
 }
 
+h2{
+  font-size: 16px;
+}
 h3 {
   font-size: 14px;
 }
 
 h4 {
-  font-size: 12px;
-  color: #bab4e5;
+  font-size: 11px;
   margin-top: 5px;
 }
 
@@ -21,11 +24,11 @@ h5 {
 
 .container {
   margin: 0 auto;
-  width: 90%;
+  width: 100vw;
   height: 100vh;
   display: grid;
   grid-template-rows: 60px 1fr;
-  grid-template-columns: 200px 1fr 300px;
+  grid-template-columns: 200px 1fr 360px;
   box-shadow: 0 0 20px 10px #ccc;
   border-radius: 20px;
 }
@@ -199,7 +202,7 @@ section .box2 {
 
 .container .user-info {
   display: grid;
-  grid-template-rows: 75px 1fr 100px 200px 1fr;
+  grid-template-rows: 75px 180px 100px 210px auto 1fr;
   grid-column: 3 / 4;
   grid-row: 1 / 3;
 }
@@ -237,7 +240,7 @@ section .box2 {
   background: #f0ecff;
   width: 280px;
   height: 90px;
-  padding: 20px;
+  padding: 10px;
   display: grid;
   grid-template-columns: 1fr 1fr;
   border-radius: 8px;
@@ -250,20 +253,97 @@ section .box2 {
 }
 
 .container .user-info .box-3 .box .troph {
-  width: 40px;
-  height: 40px;
+  width: 50px;
+  height: 50px;
   background: #fff;
   border-radius: 50%;
   display: grid;
   place-items: center;
 }
 
+.container .user-info .box-3 i {
+  font-size: 22px;
+  color: #b0abe2;
+}
+
+.container .user-info .box-3 .item-2 i, .container .user-info .box-3 .item-2 h4 {
+  color: #f47c51;
+}
+
 .container .user-info .box-3 {
   margin: 0 auto;
 }
-.container .user-info .box-4 {
-  background: rgb(255, 170, 170);
+
+.container .user-info .user-title{
+  display: flex;
+  justify-content: space-between;
+  padding: 15px;
 }
-.container .user-info .box-5 {
-  background: rgb(244, 255, 170);
+
+.container .user-info .box-4 .task-1{
+  background: #f47c51;
+  margin: 0 15px;
+  height: 70px;
+  border-radius: 8px;
+  display: flex;
+  align-items: center;
+}
+
+.container .user-info .box-4 .task-1 div:nth-child(1) {
+  background: #ffffff47;
+  width: 40px;
+  height: 40px;
+  color: #fff;
+  margin: 10px;
+  display: grid;
+  place-items: center;
+  border-radius: 8px;
+}
+
+.container .user-info .box-4 .task-1 div:nth-child(2) {
+color: #fff;
+}
+
+.container .user-info .box-4 .task-2{
+  background: #6458f3;
+  margin: 10px 15px;
+  height: 70px;
+  border-radius: 8px;
+  display: flex;
+  align-items: center;
+}
+
+.container .user-info .box-4 .task-2 div:nth-child(1) {
+  background: #ffffff47;
+  width: 40px;
+  height: 40px;
+  color: #fff;
+  margin: 10px;
+  display: grid;
+  place-items: center;
+  border-radius: 8px;
+}
+
+.container .user-info .box-4 .task-2 div:nth-child(2) {
+color: #fff;
+}
+
+
+.container .user-info .box-5 .recent-task{
+  display: flex;
+  justify-content: space-between;
+  margin:  20px 15px;
+}
+
+.container .user-info .box-5 .recent-task .status{
+  display: flex;
+  align-items: center;
+  gap: 10px;
+}
+
+.container .user-info .box-5 .recent-task .ball{
+width: 10px;
+height: 10px;
+border-radius: 50%;
+background: #40c17d;
 }
