--- a/my-app/src/app/components/dashboard/dashboard.component.css
+++ b/my-app/src/app/components/dashboard/dashboard.component.css
@@ -5,7 +5,7 @@
   text-decoration: none;
 }
 
-h2{
+h2 {
   font-size: 16px;
 }
 h3 {
@@ -165,6 +165,11 @@ section .box2 {
   height: 35px;
   font-size: 15px;
   font-weight: bold;
+  cursor: pointer;
+}
+
+.title button:hover{
+  filter: brightness(140%);
 }
 
 .title span {
@@ -246,7 +251,8 @@ section .box2 {
   border-radius: 8px;
 }
 
-.container .user-info .box-3 .box .item-1, .container .user-info .box-3 .box .item-2 {
+.container .user-info .box-3 .box .item-1,
+.container .user-info .box-3 .box .item-2 {
   display: flex;
   align-items: center;
   gap: 8px;
@@ -266,7 +272,8 @@ section .box2 {
   color: #b0abe2;
 }
 
-.container .user-info .box-3 .item-2 i, .container .user-info .box-3 .item-2 h4 {
+.container .user-info .box-3 .item-2 i,
+.container .user-info .box-3 .item-2 h4 {
   color: #f47c51;
 }
 
@@ -274,13 +281,13 @@ section .box2 {
   margin: 0 auto;
 }
 
-.container .user-info .user-title{
+.container .user-info .user-title {
   display: flex;
   justify-content: space-between;
   padding: 15px;
 }
 
-.container .user-info .box-4 .task-1{
+.container .user-info .box-4 .task-1 {
   background: #f47c51;
   margin: 0 15px;
   height: 70px;
@@ -301,10 +308,10 @@ section .box2 {
 }
 
 .container .user-info .box-4 .task-1 div:nth-child(2) {
-color: #fff;
+  color: #fff;
 }
 
-.container .user-info .box-4 .task-2{
+.container .user-info .box-4 .task-2 {
   background: #6458f3;
   margin: 10px 15px;
   height: 70px;
@@ -325,25 +332,24 @@ color: #fff;
 }
 
 .container .user-info .box-4 .task-2 div:nth-child(2) {
-color: #fff;
+  color: #fff;
 }
 
-
-.container .user-info .box-5 .recent-task{
+.container .user-info .box-5 .recent-task {
   display: flex;
   justify-content: space-between;
-  margin:  20px 15px;
+  margin: 20px 15px;
 }
 
-.container .user-info .box-5 .recent-task .status{
+.container .user-info .box-5 .recent-task .status {
   display: flex;
   align-items: center;
   gap: 10px;
 }
 
-.container .user-info .box-5 .recent-task .ball{
-width: 10px;
-height: 10px;
-border-radius: 50%;
-background: #40c17d;
+.container .user-info .box-5 .recent-task .ball {
+  width: 10px;
+  height: 10px;
+  border-radius: 50%;
+  background: #40c17d;
 }
