--- a/my-app/src/app/components/task/task.component.html
+++ b/my-app/src/app/components/task/task.component.html
@@ -1,1 +1,42 @@
-<p>task works!</p>
+<div class="container">
+  <form action="#">
+    <div class="form-group">
+      <label for="txtnome">Task</label>
+      <input
+        type="text"
+        name="txtNome"
+        id="txtNome"
+        placeholder="Digite o nome da tarefa"
+      />
+
+      <label for="txtdesc">Descrição</label>
+      <input
+        type="text"
+        name="txtDesc"
+        id="txtDesc"
+        placeholder="Digite a descrição da tarefa"
+      />
+
+      <label for="txtresp">Responsável</label>
+      <input
+        type="text"
+        name="txtResp"
+        id="txtResp"
+        placeholder="Digite o responsável da tarefa"
+      />
+
+      <label for="txtInicio">Data Início</label>
+      <input type="date" name="txtInicio" id="txtInicio" />
+
+      <label for="txtFim">Data Término</label>
+      <input type="date" name="txtFim" id="txtFim" />
+
+      <div class="button2"></div>
+        <div class="button">
+            <button>Cancelar</button>
+            <button>Cadastrar</button>
+        </div>
+
+    </div>
+  </form>
+</div>
