--- a/my-app/src/app/components/dashboard/dashboard.component.html
+++ b/my-app/src/app/components/dashboard/dashboard.component.html
@@ -1,7 +1,7 @@
 <div class="container">
   <!-- HEADER 1 -->
   <div class="header1">
-    <h2>dashboard</h2>
+    <h2>Dashboard</h2>
     <i class="bx bx-menu"></i>
   </div>
 
