--- a/my-app/src/app/components/task/task.component.html
+++ b/my-app/src/app/components/task/task.component.html
@@ -37,7 +37,7 @@
       <div class="button2"></div>
         <div class="button">
             <button>Cancelar</button>
-            <button (click)="cadastrar()">Cadastrar</button>
+            <button (click)="addTask()">Cadastrar</button>
         </div>
 
     </div>
