--- a/my-app/src/app/components/dashboard/dashboard.component.html
+++ b/my-app/src/app/components/dashboard/dashboard.component.html
@@ -180,7 +180,7 @@
     <section>
       <div class="box1">
         <div class="title">
-          <button>
+          <button (click)="addTime()">
             <i class="bx bx-plus"></i>
           </button>
           <span>Membros do Time</span>
