--- a/my-app/src/app/components/task/task.component.html
+++ b/my-app/src/app/components/task/task.component.html
@@ -1,4 +1,14 @@
 <div class="container">
+  <div class="msg" *ngIf="isSucess">
+    <i class="bx bx-check-circle"></i>
+    <span>Task Cadastrada!!</span>
+  </div>
+
+  <div class="error" *ngIf="isError">
+    <i class="bx bx-error-circle"></i>
+    <span> Tarefa não cadastrada!</span>
+  </div>
+
   <form action="#">
     <div class="form-group">
       <label for="txtnome">Task</label>
@@ -35,11 +45,10 @@
       <input type="date" name="txtFim" id="txtFim" />
 
       <div class="button2"></div>
-        <div class="button">
-            <button>Cancelar</button>
-            <button (click)="addTask()">Cadastrar</button>
-        </div>
-
+      <div class="button">
+        <button>Cancelar</button>
+        <button (click)="addTask()">Cadastrar</button>
+      </div>
     </div>
   </form>
 </div>
